# cosyvoice

tts-backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
tts-backend/.github/: CODEOWNERS  dependabot.yml
tts-backend/.github/workflows/: ci.yml  docker.yml
tts-backend/docker/: Dockerfile  Dockerfile.dev  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
tts-backend/docs/: API.md  RUNPOD.md
tts-backend/scripts/: download_model.sh  run_dev.sh  runpod_setup.sh  setup.sh  test.sh
tts-backend/src/: __init__.py  main.py
tts-backend/src/api/: __init__.py  app.py  dependencies.py  exceptions.py
tts-backend/src/api/middleware/: __init__.py  error_handler.py  request_context.py  timing.py
tts-backend/src/api/models/: __init__.py  requests.py  responses.py
tts-backend/src/api/routers/: __init__.py  health.py  synthesis.py  voices.py
tts-backend/src/audio/: __init__.py  converter.py  formats.py  metadata.py  processor.py  streaming.py  validation.py
tts-backend/src/config/: __init__.py  settings.py
tts-backend/src/core/: __init__.py  engine_registry.py  interfaces.py  models.py  tts_service.py
tts-backend/src/models/: __init__.py  base.py
tts-backend/src/models/cosyvoice/: __init__.py  config.py  engine.py  inference.py  preprocessor.py  voice_manager.py
tts-backend/src/models/f5tts/: __init__.py  config.py  engine.py  inference.py  voice_manager.py
tts-backend/src/utils/: __init__.py  logging.py  timing.py
tts-backend/tests/: __init__.py  conftest.py  factories.py
(+9 files in other folders)
